<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:paddingRight="2dp"
	android:paddingTop="0dp"
	>
	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="10dp"
		android:paddingRight="8dp"
		android:paddingBottom="10dp"
		android:paddingTop="8dp"
		>
		<TableLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			>
			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				>
				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:layout_weight="0.5"
					android:orientation="vertical"
					>
					<TextView
						android:text="@string/pwv_search_searchInText"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:paddingBottom="4dp"
						></TextView>
					<LinearLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						>
						<Spinner
							android:id="@+id/PWVSD_searchInSpinner"
							android:layout_height="wrap_content"
							android:layout_width="fill_parent"
							android:layout_weight="1.0"
							android:padding="0px"
							android:enabled="false"
							></Spinner>
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>
			<com.paranoiaworks.unicus.android.sse.components.SecureEditText
				android:text=""
				android:hint="@string/pwv_search_searchString"
				android:id="@+id/PWVSD_searchET"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:singleLine="true"
				><requestFocus />
			</com.paranoiaworks.unicus.android.sse.components.SecureEditText>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				>
				<Button
					android:id="@+id/PWVSD_cancelButton"
					android:text="@string/common_cancel_text"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					android:singleLine="true"
					android:ellipsize="end"
					style="@style/Button_Standard"	
					></Button>
				<Button
					android:id="@+id/PWVSD_searchButton"
					android:text="@string/common_search_Text"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					android:singleLine="true"
					android:ellipsize="end"
					style="@style/Button_Standard"	
					></Button>
			</LinearLayout>
		</TableLayout>
	</RelativeLayout>
</ScrollView>
