<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:id="@+id/UTPV_firstPage"
		>    
		<LinearLayout
			android:id="@+id/UTPV_mainTextContainer"
		    android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
			android:layout_weight="1.0"
	        >
			<TextView 
				android:layout_height="wrap_content"
				android:layout_width="fill_parent" 
				android:gravity="center"
				android:text="@string/common_pro_upgrade"
				android:textColor="@color/black"
				android:background="@color/white"
				android:textSize="24sp"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:textStyle="bold"
				/>
	        <FrameLayout
	            android:layout_width="fill_parent" 
	            android:layout_height="3dp"
	            android:background="@color/black"
	            />   
			<ScrollView
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:fadeScrollbars="false"
				>  
				<TextView 
					android:id="@+id/UTPV_details"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent" 
					android:textColor="@color/black"
					android:background="@color/white"
					android:textSize="17sp"
					android:scrollbars="vertical"
					android:padding="5dp"
		            />
			</ScrollView>
	    </LinearLayout>
		<LinearLayout
			android:id="@+id/UTPV_firstPageButtons"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingTop="20dp"
			android:paddingBottom="20dp"
			android:paddingLeft="20dp"
			android:paddingRight="20dp"
			android:layout_weight="0.0"
			android:orientation="vertical">
			<Button
				android:text="@string/activation_getKey"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:id="@+id/UTPV_getKeyButton"
				style="@style/ButtonExpander"
				></Button>
			<Button
				android:text="@string/activation_enterKey"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:id="@+id/UTPV_enterKeyButton"
				style="@style/ButtonExpander"
				></Button>
		</LinearLayout>
    </LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:id="@+id/UTPV_secondPage"
		android:visibility="gone"
		>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_weight="1.0"
			>
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:gravity="center"
				android:text="@string/activation_enterKey"
				android:textColor="@color/black"
				android:background="@color/white"
				android:textSize="24sp"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:textStyle="bold"
				/>
			<FrameLayout
				android:layout_width="fill_parent"
				android:layout_height="3dp"
				android:background="@color/black"
				/>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingTop="20dp"
				android:paddingBottom="20dp"
				android:paddingLeft="10dp"
				android:paddingRight="10dp"
				android:layout_weight="0.0"
				android:orientation="vertical">
				<com.paranoiaworks.unicus.android.sse.components.SecureEditText
					android:id="@+id/UTPV_enterKeyET"
					android:layout_height="wrap_content"
					android:text=""
					android:maxLength="1024"
					android:layout_width="fill_parent"
					android:singleLine="true"
					android:layout_marginBottom="2dp"
					android:digits="0123456789 abcdefABCDEF"
					></com.paranoiaworks.unicus.android.sse.components.SecureEditText>
				<Button
					android:text="@string/common_confirm_text"
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:id="@+id/UTPV_confirmKeyButton"
					style="@style/ButtonExpander"
					></Button>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
