<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>
	<LinearLayout
		android:id="@+id/CAD_main"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		>
		<LinearLayout
			android:id="@+id/CAD_containertitle"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:padding="10dp"
			android:gravity="center_vertical"
			>
			<ImageView
				android:id="@+id/CAD_icon"
				android:src="@drawable/ask_icon_large"
				android:visibility="visible"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
			<TextView
				android:text="text"
				android:id="@+id/CAD_title"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="22sp"
				android:paddingLeft="12dp"
				android:paddingRight="10dp"
				android:paddingBottom="4dp"
				android:textColor="@color/white"
				></TextView>
		</LinearLayout>
		<FrameLayout
			android:background="@color/grey_dialogBorder"
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			/>
		<ScrollView
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_weight="1.0"
			android:fadeScrollbars="true"
			>
			<TextView
				android:text="text"
				android:id="@+id/CAD_text"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="18sp"
				android:paddingLeft="12dp"
				android:paddingRight="10dp"
				android:paddingTop="12dp"
				android:paddingBottom="22dp"
				android:textColor="@color/white"
				></TextView>
		</ScrollView>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_weight="0.0"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"
			android:paddingLeft="2dp"
			android:paddingRight="2dp"
			android:layout_margin="0dp"
			android:background="@color/dialogButtonsBackground"
			>
			<Button
				android:id="@+id/CAD_cancel"
				android:text="@string/common_cancel_text"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				style="@style/Button_Standard"
				></Button>
			<Button
				android:id="@+id/CAD_continue"
				android:text="@string/common_continue_text"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"

				style="@style/Button_Standard"
			><requestFocus /></Button>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:id="@+id/CAD_container_ok"
				>
				<Button
					android:id="@+id/CAD_ok"
					android:text="@string/common_ok_text"
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					style="@style/Button_Standard"
					></Button>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>
